[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bycycle.core"
version = "0.7.dev0"
description = "byCycle core model and services"
readme = "README.rst"
license = "GPL-3.0+"
authors = ["Wyatt Baldwin <wyatt@bycycle.org>"]
homepage = "https://bycycle.org/"
repository = "https://github.com/bycycle-org/bycycle.core"

keywords = [
    "bicycle",
    "bike",
    "directions",
    "routing",
    "trip planner",
]

packages = [
    { include = "bycycle" },
]

include = [
    "AUTHORS",
    "CHANGELOG",
    "INSTALL",
    "LICENSE",
    "Makefile",
    "commands.py",
    "commands.yaml",
    "bycycle/core/commands.yaml",
    "bycycle/core/model/usps_street_suffixes.csv",
]

[tool.poetry.dependencies]
python = "^3.6"
Dijkstar = { version = "3.0a4", extras = ["client"] }
ijson = "^2.5.1"
mapbox = "^0.18.0"
mercantile = "^1.1.2"
numpy = "^1.17.4"
psycopg2-binary = "^2.8.4"
pyproj = "^2.4.2"
requests = "^2.22.0"
runcommands = "^1.0a50"
Shapely = "^1.6.4"
SQLAlchemy = "^1.3.12"
tangled = "^1.0a12"

[tool.poetry.dev-dependencies]
bpython = "*"
coverage = "*"

[tool.poetry.scripts]
bycycle = "bycycle.core.__main__:bycycle.console_script"
