[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bycycle.core"
version = "0.7.dev0"
description = "byCycle core model and services"
readme = "README.rst"
license = "GPL-3.0+"
authors = ["Wyatt Baldwin <wyatt@bycycle.org>"]
homepage = "https://bycycle.org/"
repository = "https://github.com/bycycle-org/bycycle.core"

keywords = [
    "bicycle",
    "bike",
    "directions",
    "routing",
    "trip planner",
]

packages = [
    { include = "bycycle" },
]

include = [
    "AUTHORS",
    "CHANGELOG",
    "INSTALL",
    "LICENSE",
    "Makefile",
    "commands.py",
    "commands.yaml",
    "bycycle/core/commands.yaml",
    "bycycle/core/model/usps_street_suffixes.csv",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
Dijkstar = { version = "3.0a4", extras = ["client"] }
ijson = "^3.1.4"
mapbox = "^0.18.0"
mercantile = "^1.2.1"
numpy = "^1.21.2"
psycopg2-binary = "^2.9.1"
pyproj = "^3.2.1"
requests = "^2.26.0"
runcommands = "^1.0a68"
Shapely = "^1.7.1"
SQLAlchemy = "^1.4.25"
tangled = "^1.0a12"

[tool.poetry.dev-dependencies]
bpython = "*"
coverage = "*"

[tool.poetry.scripts]
bycycle = "bycycle.core.__main__:bycycle.console_script"
