[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bycycle.core"
version = "0.7.dev0"
description = "byCycle core model and services"
readme = "README.rst"
license = "GPL-3.0+"
authors = ["Wyatt Baldwin <wyatt@bycycle.org>"]
homepage = "https://bycycle.org/"
repository = "https://github.com/bycycle-org/bycycle.core"

keywords = [
    "bicycle",
    "bike",
    "directions",
    "routing",
    "trip planner",
]

packages = [
    { include = "bycycle" },
]

include = [
    "AUTHORS",
    "CHANGELOG",
    "INSTALL",
    "LICENSE",
    "Makefile",
    "commands.py",
    "commands.yaml",
    "bycycle/core/commands.yaml",
    "bycycle/core/model/usps_street_suffixes.csv",
]

[tool.poetry.dependencies]
python = "^3.12"
Dijkstar = { version = "^3.0a5", extras = ["client"] }
ijson = "^3.2.3"
mapbox = "^0.18.1"
mercantile = "^1.2.1"
numpy = "^1.26.4"
psycopg2-binary = "^2.9.9"
pyproj = "^3.6.1"
requests = "^2.31.0"
runcommands = "^1.0a71"
Shapely = "^2.0.3"
SQLAlchemy = "^1.4.52"

[tool.poetry.dev-dependencies]
bpython = "*"
coverage = "*"

[tool.poetry.scripts]
bycycle = "bycycle.core.__main__:bycycle.console_script"
